tests/valid/trait/method_call_short_ufcs_local_inferred_empty_enum_constructor_receiver.facet
enum Job {
  Ready
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x = Job::Ready();
  (Runner::run x)
}
