tests/invalid/enum/constructor_arity_mismatch.facet
enum BoolLike {
  Yes
}

fn bad() -> unrestricted BoolLike {
  BoolLike::Yes(1)
}
